Following work done: - Remove !important tags from code-preview as not needed anymore. - Remove border-radius: 0 as it was conflicting with rounded-md in code-preview. - Reduce global scroll bar width to 8px. - Remove global scrollbar track color. - Fix input widths in forms to not go beyond parent width. - Add radio input forms template. - Add checkbox input forms template.

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -9,15 +9,15 @@
 @tailwind utilities
 
 *::-webkit-scrollbar
-  width 10px
+  width 8px
 
 *::-webkit-scrollbar-thumb
-  border-radius 10px
+  border-radius 8px
   background-color $accentColor
 
 *::-webkit-scrollbar-track
-  border-radius 10px
-  background-color rgba(86, 61, 124, 0.226)
+  border-radius 8px
+  // background-color rgba(86, 61, 124, 0.226)
 
 
 body
